# notion-cli-hs

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  Makefile  README.md  cabal.project.freeze  hie.yaml  notion-cli.cabal  package.yaml
.github/workflows/: haskell.yml
app/: Main.hs
etc/: notion-cli.conf
src/Notion/: GetUploadFileUrl.hs  GetUserAnalyticsSettings.hs  SubmitTransaction.hs
src/Notion/SubmitTransaction/: Operation.hs
src/S3/: Put.hs
